Output~
g++ -Wall -Wextra -std=c++11 -c libCluster.cpp
libCluster.cpp:33:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
libCluster.cpp:69:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
libCluster.cpp:121:1: warning: "/*" within comment [-Wcomment]
 /*
 ^
g++    -c -o testCluster.o testCluster.cpp
In file included from testCluster.cpp:3:0:
cluster.h:50:20: error: ‘std::shared_ptr’ has not been declared
   int addSite(std::shared_ptr<site>); //addSites to cluster
                    ^
cluster.h:50:30: error: expected ‘,’ or ‘...’ before ‘<’ token
   int addSite(std::shared_ptr<site>); //addSites to cluster
                              ^
make: *** [testCluster.o] Error 1
